--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link al css -->
     <link rel="stylesheet" href="style/style.css">
+    <!-- Icono de pagina -->
     <link rel="shortcut icon" href="imgs/Logo.png" type="image/x-icon">
+    <!-- Fuentes utilizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <!-- Link al bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"                                       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Inicio</title>
 </head>
 <body id="body">
@@ -25,23 +30,162 @@
             </div>
         </section>
         <nav class="navMenu">
-            <div class="navMenu_div">
-                <a href="/">
-                    <img class="navMenu_div_img" src="imgs/Logo.png" alt="">
-                </a>
+            <div class="nav-left">
+                <div class="navMenu_div">
+                    <a href="/">
+                        <img class="navMenu_div_img" src="imgs/Logo.png" alt="">
+                    </a>
+                </div>
+                <div class="dropdown">
+                    <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown"><img src="https://img.icons8.com/?size=100&id=0hHvb4pS3tau&format=png&color=000000" alt=""> Categorias</button>
+                    <ul class="navMenu_ul dropdown-menu">
+                        <li class="navMenu_ul_li">
+                            <a href="pages/marcas.html" class="dropdown-item navMenu_ul_li_a">Marcas</a>
+                        </li>
+                        <li><a href="pages/productos.html" class="dropdown-item navMenu_ul_li_a">Productos</a></li>
+                        <li><a href="pages/nosotros.html" class="dropdown-item navMenu_ul_li_a">Nosotros</a></li>
+                        <li><a href="pages/servicios.html" class="dropdown-item navMenu_ul_li_a">Servicios</a></li>
+                    </ul>
+                </div>
             </div>
-            <ul class="navMenu_ul">
-                <li class="navMenu_ul_li">
-                    <a href="pages/marcas.html" class="navMenu_ul_li_a">Marcas</a>
-                    <a href="pages/productos.html" class="navMenu_ul_li_a">Productos</a>
-                    <a href="pages/nosotros.html" class="navMenu_ul_li_a">Nosotros</a>
-                    <a href="pages/servicios.html" class="navMenu_ul_li_a">Servicios</a>
-                </li>
-            </ul>
+            <div class="nav-center">
+                <div class="search-box">
+                    <label for="search-input" class="search-box__label">
+                        <input type="text" id="search-input" placeholder="¿Que estas buscando?">
+                        <span class="search-icon"><img class="search-box__img" src="https://img.icons8.com/?size=100&id=7695&format=png&color=000000" alt=""></span>
+                    </label>
+                </div>
+            </div>
+            <div class="nav-right">
+                <div class="dropdown">
+                    <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown"><img src="https://img.icons8.com/?size=100&id=7880&format=png&color=000000" alt="icono-ubicacion"> Estas en</button>
+                    <ul class="navMenu_ul dropdown-menu">
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Salta</a></li>
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Tartagal</a></li>
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Oran</a></li>
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Jujuy</a></li>
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Tucuman</a></li>
+                        <li><a class="dropdown-item navMenu_ul_li_a" href="">Catamarca</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <button>
+                        <a href="/"><img src="https://img.icons8.com/?size=100&id=7819&format=png&color=000000" alt="icon-account"></a>
+                    </button>
+                </div>
+                <div>
+                    <button>
+                        <a href="/"><img src="https://img.icons8.com/?size=100&id=9720&format=png&color=000000" alt="icon-carrito"></a>
+                    </button>
+                </div>
+            </div>
         </nav>
     </header>
 
     <main id="main">
+        <!-- Carrousel Novedades -->
+        <section class="carrousel-novedades">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="medias\Pagina Main\banner de novedades\carrousel1.png" class="d-block w-100 carrousel-novedades__imgs" alt="imagen-novedades-1">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="medias\Pagina Main\banner de novedades\carrousel2.png" class="d-block w-100 carrousel-novedades__imgs" alt="imagen-novedades-2">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="medias\Pagina Main\banner de novedades\carrousel3.png" class="d-block w-100 carrousel-novedades__imgs" alt="imagen-novedades-3">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+                </div>
+        </section>
+        <!-- Seccion de contenido -->
+        <div class="contenido">
+            <div class="contenido__boxes"><img class="contenido__imgs" src="https://img.icons8.com/?size=100&id=8290&format=png&color=000000" alt=""> <p class="contenido__p">Envios a todo <br>el pais</p></div>
+            <div class="contenido__boxes"><img class="contenido__imgs" src="https://img.icons8.com/?size=100&id=12095&format=png&color=000000" alt=""> <p class="contenido__p">Descuentos todas <br>las semanas</br></p></div>
+            <div class="contenido__boxes"><img class="contenido__imgs" src="https://img.icons8.com/?size=100&id=22125&format=png&color=000000" alt=""> <p class="contenido__p">Naranja X visa <br>hasta 12 sin interes</br></p></div>
+            <div class="contenido__boxes"><img class="contenido__imgs" src="https://img.icons8.com/?size=100&id=59144&format=png&color=000000" alt=""> <p class="contenido__p">Seguridad por <br>whatsapp</p></div>
+        </div>
+
+        <!-- Carrousel de Productos Destacados -->
+        <div class="Carrousel">
+            <h5>Productos Destacados</h5>
+            <div class="Carrousel-Destacados">
+                <div >
+                    <button class="btn">
+                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=26146&format=png&color=000000" alt="">
+                    </button>
+                </div>
+                <div class="Carrousel-Destacados__box">
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\Amoladora.jpg" alt=""></div>
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\Destornillador.jpg" alt=""></div>
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\Nivel.jpg" alt=""></div>
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\pelacables.jpg" alt=""></div>
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\taladro.jpg" alt=""></div>
+                    <div><img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos\Tijera-Podar.png" alt=""></div>
+                </div>
+                <div>
+                    <button class="btn">
+                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=26147&format=png&color=000000" alt="">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Carrousel de Ofertas -->
+        <div class="Carrousel">
+            <h5>Ofertas Imperdibles</h5>
+            <div class="Carrousel-Ofertas">
+                <div>
+                    <button class="btn">
+                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=26146&format=png&color=000000" alt="">
+                    </button>
+                </div>
+                <div class="Carrousel-Ofertas__box">
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\1.png" alt=""></div>
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\2.png" alt=""></div>
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\3.png" alt=""></div>
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\4.png" alt=""></div>
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\5.png" alt=""></div>
+                    <div class="Carrousel-Ofertas__slide"><img class="Carrousel-Ofertas__imgs" src="medias\Pagina Main\Carrousel-Ofertas\6.png" alt=""></div>
+                </div>
+                <div>
+                    <button class="btn">
+                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=26147&format=png&color=000000" alt="">
+                    </button>
+                </div>
+            </div>
+            
+        </div>
+        <!-- Seccion de Categorias mas populares -->
+        <div class="sec">
+            <h5>Categorias Destacadas</h5>
+            <div class="sec-destacada">
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Herramientas.jpg" alt=""><p>Herramientas</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Carpinteria.jpg" alt=""><p>Carpinteria</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\tanques.jpg" alt=""><p>Tanques</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Tornilleria.jpg" alt=""><p>Tornilleria</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\cortes.jpg" alt=""><p>Cortes</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Pinzas.jpg" alt=""><p>Pinzas</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Escalera.jpg" alt=""><p>Escaleras</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Pinturas.jpg" alt=""><p>Pintura</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\rodillos.jpg" alt=""><p>Rodillos</p></div>
+                <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias\Ceramicas.png" alt=""><p>Ceramica</p></div>
+            </div>
+        </div>
     </main>
 
     <footer id="footer">
@@ -101,5 +245,7 @@
             <a target="_blank" href="https://www.linkedin.com/feed/"><img src="https://img.icons8.com/?size=100&id=84888&format=png&color=000000" class="footer_S_img"  alt=""></a>
         </div>
     </footer>
+    <!-- Scrip del bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
