--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,41 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link al css -->
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/queries.css">
+    <!-- Icono de pagina -->
     <link rel="shortcut icon" href="/imgs/Logo.png" type="image/x-icon">
+    <!-- Fuentes utilizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <!-- Link al bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Servicios</title>
 </head>
 <body id="body">
     <header id="header">
-        <section class="headerSec">
-            <div class="headerSec_div">
-                <img src="https://img.icons8.com/?size=100&id=86875&format=png&color=000000" alt="" class="headerSec_div_img">
-                <a target="_blank" href="" class="headerSec_div_txt">contacto@laobra.com.ar</a>
-            </div>
-            <div class="headerSec_divspace"></div>
-            <div class="headerSec_div">
-                <img src="https://img.icons8.com/?size=100&id=533&format=png&color=000000" alt="" class="headerSec_div_img">
-                <a target="_blank" href="" class="headerSec_div_txt">0802-120-21004</a>
-            </div>
-        </section>
-        <nav class="navMenu">
-            <div class="navMenu_div">
-                <a href="/index.html">
-                    <img class="navMenu_div_img" src="/imgs/Logo.png" alt="">
-                </a>
-            </div>
-            <ul class="navMenu_ul">
-                <li class="navMenu_ul_li">
-                    <a href="marcas.html" class="navMenu_ul_li_a">Marcas</a>
-                    <a href="productos.html" class="navMenu_ul_li_a">Productos</a>
-                    <a href="nosotros.html" class="navMenu_ul_li_a">Nosotros</a>
-                    <a href="/" class="navMenu_ul_li_a">Servicios</a>
-                </li>
-            </ul>
-        </nav>
+        <!-- Clase para que se quede arriba todo el nav -->
+        <div class="fixed-top">
+            <section class="headerSec">
+                <div class="headerSec_div">
+                    <img src="https://img.icons8.com/?size=100&id=86875&format=png&color=000000" alt="" class="headerSec_div_img">
+                    <a target="_blank" href="" class="headerSec_div_txt">contacto@laobra.com.ar</a>
+                </div>
+                <div class="headerSec_divspace"></div>
+                <div class="headerSec_div">
+                    <img src="https://img.icons8.com/?size=100&id=533&format=png&color=000000" alt="" class="headerSec_div_img">
+                    <a target="_blank" href="" class="headerSec_div_txt">0802-120-21004</a>
+                </div>
+            </section>
+            <nav class="navMenu navbar navbar-expand-lg">
+                <div class="containerM">
+                    <div class="nav-left">
+                        <div class="navMenu_div">
+                            <a href="../index.html">
+                                <img class="navMenu_div_img" src="/imgs/Logo.png" alt="">
+                            </a>
+                        </div>
+                        <div class="dropdown">
+                            <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown"><img class="dropdown__imgs" src="https://img.icons8.com/?size=100&id=36389&format=png&color=000000" alt=""> <h6>Categorias</h6></button>
+                            <ul class="navMenu_ul dropdown-menu">
+                                <li class="navMenu_ul_li">
+                                    <a href="marcas.html" class="dropdown-item navMenu_ul_li_a">Marcas</a>
+                                </li>
+                                <li><a href="productos.html" class="dropdown-item  navMenu_ul_li_a">Productos</a></li>
+                                <li><a href="nosotros.html" class="dropdown-item  navMenu_ul_li_a">Nosotros</a></li>
+                                <li><a href="/" class="dropdown-item navMenu_ul_li_a">Servicios</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="nav-center">
+                        <div class="search-box">
+                            <label for="search-input" class="search-box__label">
+                                <input type="text" id="search-input" class="" placeholder="¿Que estas buscando?">
+                                <span class="search-icon"><img class="search-box__img" src="https://img.icons8.com/?size=100&id=7695&format=png&color=000000" alt=""></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="nav-right">
+                        <div class="dropdown"  >
+                            <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown"><img class="dropdown__imgs" src="https://img.icons8.com/?size=100&id=7880&format=png&color=000000" alt="icono-ubicacion"><h6>Estas en</h6></button>
+                            <div id="navbarSupportedContent">
+                                <ul class="navMenu_ul dropdown-menu" >
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Salta</a></li>
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Tartagal</a></li>
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Oran</a></li>
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Jujuy</a></li>
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Tucuman</a></li>
+                                    <li><a class="dropdown-item navMenu_ul_li_a" href="#">Catamarca</a></li>
+                                </ul>
+                            </div>
+                            
+                        </div>
+                        <div>
+                            <button class="btn-nav">
+                                <a href="#"><img class="btn-nav__imgs" src="https://img.icons8.com/?size=100&id=7819&format=png&color=000000" alt="icon-account"></a>
+                            </button>
+                        </div>
+                        <div>
+                            <button class="btn-nav">
+                                <a href="#"><img class="btn-nav__imgs" src="https://img.icons8.com/?size=100&id=9720&format=png&color=000000" alt="icon-carrito"></a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
+            </nav>
+        </div>
     </header>
 
     <main id="main">
@@ -102,5 +153,8 @@
             <a target="_blank" href="https://www.linkedin.com/feed/"><img src="https://img.icons8.com/?size=100&id=84888&format=png&color=000000" class="footer_S_img"  alt=""></a>
         </div>
     </footer>
+
+    <!-- Scrip del bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
