--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -265,7 +265,7 @@
         </div>
     </header>
 
-    <main id="main">
+    <main id="main-B">
         <!-- Indicador de pagina actual con navegacion jerarquica -->
         <div class="Bcumb" aria-label="breadcrumb">
             <ol class="breadcrumb">
