--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Link al bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!-- Link de iconos de bootstrap -->
+    <!-- Link de iconos para Flaticon -->
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Inicio</title>
 </head>
@@ -162,7 +164,7 @@
                             <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header ">
-                                <h2 class="modal-title fs-2" id="exampleModalLabel">Iniciar Session</h2>
+                                <h2 class="modal-title fs-2 row-cols-8" id="exampleModalLabel">Iniciar sesión</h2>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" data-bs-target="exampleModal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -204,7 +206,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="modal-footer col-4 col-sm-8">
+                                <div class="modal-footer  d-flex justify-content-center w-100">
                                     <div class="Modal__footer">
                                         <h3 class="Modal__footer__h3">o usar tu cuenta de</h3>
                                         <!-- Iconos-Footer-Modal -->
@@ -302,17 +304,17 @@
             <h5>Productos Destacados</h5>
             <div id="carouselExample" class=" carousel Carrousel-Destacados">
                 <div class="Carrousel-Destacados__box">
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/Amoladora.webp" alt=""></div>
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/Destornillador.webp" alt=""></div>
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/Nivel.webp" alt=""></div>
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/pelacables.webp" alt=""></div>
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/taladro.webp" alt=""></div>
-                    <div >
+                    <div class="Carrousel-Destacados__slide">
                         <img class="Carrousel-Destacados__imgs" src="medias\Pagina Main\Carrousel-Productos/Tijera-Podar.webp" alt=""></div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -383,11 +385,6 @@
         <div class="sec">
             <h5>Categorias Destacadas</h5>
             <div id="carouselExampleSeccion" class="sec-container">
-                <!-- <div>
-                    <button class="btn__sec">
-                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=37353&format=png&color=000000" alt="icon-arrow-left">
-                    </button>
-                </div> -->
                 <div class="sec-destacada">
                     <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias/Herramientas.webp" alt=""><p>Herramientas</p></div>
                     <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias/Carpinteria.webp" alt=""><p>Carpinteria</p></div>
@@ -400,11 +397,6 @@
                     <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias/rodillos.webp" alt=""><p>Rodillos</p></div>
                     <div class="sec-destacada__boxes"><img class="sec-destacada__img" src="medias\Pagina Main\Carrousel-Categorias/Ceramicas.webp" alt=""><p>Ceramica</p></div>
                 </div>
-                <!-- <div>
-                    <button class="btn__sec">
-                        <img class="btn__imgs" src="https://img.icons8.com/?size=100&id=37354&format=png&color=000000" alt="icon-arrow-right">
-                    </button>
-                </div> -->
                 <button class="carousel-control-prev btn__sec" type="button" data-bs-target="#carouselExampleOffer" data-bs-slide="prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
                         <path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
@@ -539,6 +531,6 @@
     <!-- //////////////-Fin-del-footer-////////////// -->
     <!-- Scrip del bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <script src="/assets/offcanvas.js"></script>
+    <!-- <script src="/assets/offcanvas.js"></script> -->
 </body>
 </html>
