--- a/pages/productos.html
+++ b/pages/productos.html
@@ -206,7 +206,7 @@
                                 </div>
                                 <div class="modal-footer col-4 col-sm-8">
                                     <div class="Modal__footer">
-                                        <h3 class="Modal__footer__h3">o usar tu cuenta de</h3>
+                                        <h3 class="Modal__footer__h3">o usa tu cuenta de</h3>
                                         <div>
                                             <a href="#">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" class="bi bi-google" viewBox="0 0 16 16" alt="icon-google">
@@ -280,8 +280,8 @@
         <!-- Filtros para Productos -->
         <div class="subNav ">
             <div class="subNav-left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="black" class="bi bi-sort-down" viewBox="0 0 16 16">
-                    <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5M7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentcolor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
+                    <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5z"/>
                 </svg>
                 <h6>Ordenar por</h6>
                 <div class="dropdown ">
@@ -298,112 +298,108 @@
             </div>
             
             <div class="subNav-right">
-                <button class="bar__btn__grid"><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="black" class="bi bi-list-check" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
-                    </svg></a></button>
-                <button class="bar__btn__grid"><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="black" class="bi bi-grid-1x2-fill" viewBox="0 0 16 16">
-                    <path d="M0 1a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm9 0a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1zm0 9a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1z"/>
-                    </svg></a></button>
+                <button class="bar__btn__grid"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-ui-checks" viewBox="0 0 16 16">
+                    <path d="M7 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zM2 1a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm0 8a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2zm.854-3.646a.5.5 0 0 1-.708 0l-1-1a.5.5 0 1 1 .708-.708l.646.647 1.646-1.647a.5.5 0 1 1 .708.708zm0 8a.5.5 0 0 1-.708 0l-1-1a.5.5 0 0 1 .708-.708l.646.647 1.646-1.647a.5.5 0 0 1 .708.708zM7 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm0-5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 8a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/></svg><a href="/"></a></button>
+                <button class="bar__btn__grid"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-ui-checks-grid" viewBox="0 0 16 16">
+                    <path d="M2 10h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1m9-9h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-3a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1m0 9a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm0-10a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM2 9a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2zm7 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2zM0 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm5.354.854a.5.5 0 1 0-.708-.708L3 3.793l-.646-.647a.5.5 0 1 0-.708.708l1 1a.5.5 0 0 0 .708 0z"/></svg></a></button>
             </div>
         </div>
 
         <!-- Caja y Cards de Productos -->
         <section class="ctn">
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/buscapolo.webp" alt="img-producto">
+            <div class="ctn-p--Blur">
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/buscapolo.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/caladora.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/caladora.webp" alt="img-producto">
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/cierra-circular.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/Cinta-pasacables.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/cierra-circular.webp" alt="img-producto">
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/Corte-vertical.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/Lijadora.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/Cinta-pasacables.webp" alt="img-producto">
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/llave-inglesa.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
-                </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/Corte-vertical.webp" alt="img-producto">
-                </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
-                </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/Lijadora.webp" alt="img-producto">
-                </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
-                </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/llave-inglesa.webp" alt="img-producto">
-                </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
-                </div>
-            </div>
-
-            <div class="ctn__Cards">
-                <div class="ctn__Cards__imgs">
-                    <img  src="/medias\Pagina Productos/tester.webp" alt="img-producto">
-                </div>
-                <div class="ctn__Cards__box">
-                    <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
-                    <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
-                    <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                <div class="ctn__Cards">
+                    <div class="ctn__Cards__imgs">
+                        <img  src="/medias\Pagina Productos/tester.webp" alt="img-producto">
+                    </div>
+                    <div class="ctn__Cards__box">
+                        <h5 class="ctn__Cards__box__h5">Titulo del Producto</h5>
+                        <p class="ctn__Cards__box__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, magni.</p>
+                        <button type="button" class="ctn__Cards__box__btn" id="liveToastBtn">Añadir al carrito</button>
+                    </div>
                 </div>
             </div>
+            
 
 
             <!-- Alertas de producto añadido al carrito -->
             <div aria-live="polite" aria-atomic="true" class="position-absolute d-flex justify-content-center align-items-center w-100">
-                <div class="toast-container position-fixed top-0 end-0 p-3">
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                             <div class="toast-header">
-                                <img src="https://img.icons8.com/?size=100&id=25296&format=png&color=000000" class="rounded me-2 toast__img" alt="icon-alert-toasts">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="black" class="bi bi-cart-check-fill rounded me-2" viewBox="0 0 16 16" alt="icon-alert-toasts">
+                                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708"/>
+                                </svg> 
                                 <strong class="me-auto">Lista de Compras</strong>
                                 <small>hace 1 seg</small>
                                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -530,7 +526,7 @@
     <!-- Script del bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <!-- Script para que funcionen los toasts -->
-<script src="/assets/toasts.js"></script>
+    <script src="/assets/toasts.js"></script>
     <!-- Script del captcha -->
     <script src="https://www.google.com/recaptcha/api.js?render=6LfDOUorAAAAAF1wx5DSk1DChbRwCtCf-NVfQDLG"></script>
 </body>
