--- a/index.html
+++ b/index.html
@@ -152,6 +152,6 @@
         <!-- Scrip del bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
         <!-- Script-Principal -->
-        <script type="module" src="src\main.js"></script>
+        <script type="module" src="./src/main.js"></script>
     </body>
 </html>
